--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "1.0.14",
     "react-test-renderer": "15.6.1",
     "redux": "3.7.2",
-    "reselect": "3.0.1"
+    "reselect": "3.0.1",
+    "font-awesome": "4.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
